Updated the "Add new bugapoint" button

--- a/src/app/admin-components/bugapoint-management/bugapointmenu/bugapointmenu.component.css
+++ b/src/app/admin-components/bugapoint-management/bugapointmenu/bugapointmenu.component.css
@@ -1,1 +1,12 @@
+.newpointDiv {
+  display: flex;
+  flex-direction: column;
 
+
+  box-sizing: border-box;
+}
+
+button {
+  height: 40px;
+  margin-bottom: 1.2em;
+}
